# mcpkg

./: .astyle  CMakeLists.txt  LICENSE  README.md
Documentation/style/: c_style.md
libmcpkg/: .CmakeLists.txt.kate-swp  CMakeLists.txt  code_names.c  code_names.h  mcpkg.h  mcpkg_activate.c  mcpkg_activate.h  mcpkg_cache.c  mcpkg_cache.h  mcpkg_config.h  mcpkg_export.h  mcpkg_get.c  mcpkg_get.h
libmcpkg/api/: mcpkg_activate.c  mcpkg_activate.h  mcpkg_api_client.c  mcpkg_api_client.h  mcpkg_cache.c  mcpkg_cache.h  mcpkg_config.h  mcpkg_deps_entry.c  mcpkg_deps_entry.h  mcpkg_entry.c  mcpkg_entry.h  mcpkg_get.c  mcpkg_get.h  mcpkg_info_entry.c  mcpkg_info_entry.h  modrith_client.c  modrith_client.h
libmcpkg/container/: mcpkg_container_error.h  mcpkg_container_util.h  mcpkg_hash.c  mcpkg_hash.h  mcpkg_hash_p.h  mcpkg_list.c  mcpkg_list.h  mcpkg_map.c  mcpkg_map.h  mcpkg_map_p.h  mcpkg_str_list.c  mcpkg_str_list.h  mcpkg_str_list_p.h
libmcpkg/crypto/: mcpkg_crypto.c  mcpkg_crypto.h  mcpkg_crypto_hash.c  mcpkg_crypto_hash.h  mcpkg_crypto_hex.c  mcpkg_crypto_hex.h  mcpkg_crypto_init.c  mcpkg_crypto_init.h  mcpkg_crypto_ledger.h  mcpkg_crypto_provider_verify.c  mcpkg_crypto_provider_verify.h  mcpkg_crypto_rand.c  mcpkg_crypto_rand.h  mcpkg_crypto_sign.c  mcpkg_crypto_sign.h  mcpkg_crypto_util.c  mcpkg_crypto_util.h  mcpkg_leaf_index_cache.c  mcpkg_leaf_index_cache.h  mcpkg_manifest_and_sig.c  mcpkg_manifest_and_sig.h  mcpkg_merkle_b2b32.c  mcpkg_merkle_b2b32.h  mcpkg_merkle_consistency_b2b32.c  mcpkg_merkle_consistency_b2b32.h  mcpkg_repo_page.c  mcpkg_repo_page.h  mcpkg_sip_hash.c  mcpkg_sip_hash.h
libmcpkg/crypto/old/: mcpkg_crypto_ledger.h
libmcpkg/fs/: mcpkg_fs.c  mcpkg_fs.h  mcpkg_fs_dir.c  mcpkg_fs_dir.h  mcpkg_fs_error.c  mcpkg_fs_error.h  mcpkg_fs_file.c  mcpkg_fs_file.h  mcpkg_fs_std_paths.c  mcpkg_fs_std_paths.h  mcpkg_fs_util.c  mcpkg_fs_util.h
libmcpkg/math/: mcpkg_math.h
libmcpkg/mc/: mcpkg_mc.c  mcpkg_mc.h  mcpkg_mc_loaders.c  mcpkg_mc_loaders.h  mcpkg_mc_loaders_msgpack.c  mcpkg_mc_providers.c  mcpkg_mc_providers.h  mcpkg_mc_util.c  mcpkg_mc_util.h  mcpkg_mc_versions.c  mcpkg_mc_versions.h  mcpkg_mc_versions_msgpack.c  mcpkg_mc_versions_msgpack.h
libmcpkg/mp/: mcpkg_mp_block.h  mcpkg_mp_digest.c  mcpkg_mp_digest.h  mcpkg_mp_ledger_attestation.c  mcpkg_mp_ledger_attestation.h  mcpkg_mp_ledger_audit_node.c  mcpkg_mp_ledger_audit_node.h  mcpkg_mp_ledger_audit_path.c  mcpkg_mp_ledger_audit_path.h  mcpkg_mp_ledger_block.c  mcpkg_mp_ledger_block.h  mcpkg_mp_ledger_consistency.c  mcpkg_mp_ledger_consistency.h  mcpkg_mp_ledger_delegate.c  mcpkg_mp_ledger_delegate.h  mcpkg_mp_ledger_devlink.c  mcpkg_mp_ledger_devlink.h  mcpkg_mp_ledger_devproof.c  mcpkg_mp_ledger_devproof.h  mcpkg_mp_ledger_devsig.c  mcpkg_mp_ledger_devsig.h  mcpkg_mp_ledger_hash32.c  mcpkg_mp_ledger_hash32.h  mcpkg_mp_ledger_revoke.c  mcpkg_mp_ledger_revoke.h  mcpkg_mp_ledger_reward.c  mcpkg_mp_ledger_reward.h  mcpkg_mp_ledger_sth.c  mcpkg_mp_ledger_sth.h  mcpkg_mp_ledger_tx.c  mcpkg_mp_ledger_tx.h  mcpkg_mp_pkg_depends.c  mcpkg_mp_pkg_depends.h  mcpkg_mp_pkg_digest.c  mcpkg_mp_pkg_digest.h  mcpkg_mp_pkg_file.c  mcpkg_mp_pkg_file.h  mcpkg_mp_pkg_meta.c  mcpkg_mp_pkg_meta.h  mcpkg_mp_pkg_origin.c  (+3 more)
libmcpkg/net/: mcpkg_net_client.c  mcpkg_net_client.h  mcpkg_net_curl_util.h  mcpkg_net_downloader.c  mcpkg_net_downloader.h  mcpkg_net_url.c  mcpkg_net_url.h  mcpkg_net_util.c  mcpkg_net_util.h
libmcpkg/net/modrinth/: mcpkg_modrinth_json.c  mcpkg_modrinth_json.h  mcpkg_net_modrinth_client.c  mcpkg_net_modrinth_client.h
libmcpkg/pack/: mcpkg_deps_entry.c  mcpkg_entry.h  mcpkg_info_entry.c  mcpkg_msgpack.c  mcpkg_msgpack.h
libmcpkg/providers/: modrith_client.c  modrith_client.h
libmcpkg/threads/: mcpkg_thread.c  mcpkg_thread.h  mcpkg_thread_future.c  mcpkg_thread_future.h  mcpkg_thread_pool.c  mcpkg_thread_pool.h  mcpkg_thread_promise.c  mcpkg_thread_promise.h  mcpkg_thread_util.c  mcpkg_thread_util.h
libmcpkg/threads/posix/: mcpkg_thread_posix.c  mcpkg_thread_posix.h
libmcpkg/threads/thrid-party/tinycthread/: README.md  tinycthread.c  tinycthread.h
libmcpkg/threads/win/: mcpkg_thread_win32.c  mcpkg_thread_win32.h
libmcpkg/utils/: array_helper.c  array_helper.h  code_names.c  code_names.h  compat.h  mcpkg_export.h  mcpkg_fs.c  mcpkg_fs.h  mcpkg_msgpack.h  mcpkg_visited_set.h
libmcpkg/win/: mcpkg_win_compat.c
mcpkg/: CMakeLists.txt  activate.c  activate.h  cache.c  cache.h  config.c  config.h  get.c  get.h  install.c  install.h  main.c  update.c  update.h
mcpkg-java-bindings/: build.gradle
mcpkg-java-bindings/src/main/java/com/mcpkg/jni/: Mcpkg.java
mcpkg-java-bindings/src/main/native/: CMakeLists.txt  mcpkg_jni.c
mpgen/: CMakeLists.txt  mpgen.py
mpgen/schemas/: mpgen_schema.json  sig.yaml
mpgen/schemas/ledger/: ledger_attestation.yaml  ledger_audit_node.yaml  ledger_audit_path.yaml  ledger_block.yaml  ledger_consistency.yaml  ledger_delegate.yaml  ledger_devlink.yaml  ledger_devproof.yaml  ledger_devsig.yaml  ledger_hash32.yaml  ledger_revoke.yaml  ledger_reward.yaml  ledger_sth.yaml  ledger_tx.yaml
mpgen/schemas/pkg/: pkg_depends.yaml  pkg_digest.yaml  pkg_file.yaml  pkg_meta.yaml  pkg_origin.yaml
mpgen/templates/: c_header.jinja  c_source.jinja
tests/: CMakeLists.txt
tests/libmcpkg_tst/: CMakeLists.txt  main.c  tst_containers.h  tst_crypto.h  tst_filesystem.h  tst_ledger_roundtrip.h  tst_mc.h  tst_modrinth_blockchain.h  tst_net.h  tst_net_downloader.h  tst_pack.h  tst_pkg_roundtrip.h  tst_threads_basic.h  tst_threads_concurrent.h  tst_tmp.h
tests/libtst_macros/: CMakeLists.txt  tst_macros.c  tst_macros.h
